# graphics-editor

./: CMakeLists.txt  Makefile  README.md
include/SDL2/: SDL_config.h
include/glad/: glad.h
src/: glad.c  main.c
